@@ -255,7 +255,7 @@ void CObjectAI::tank_ai(CObject &object, bool hardmode)
 			}
 			else
 			{
-				newobject.spawn(x, y+(5<<STC), OBJ_RAY, m_Episode);
+				newobject.spawn(object.getXLeftPos(), y+(5<<STC), OBJ_RAY, m_Episode, LEFT);
 				newobject.ai.ray.direction = LEFT;
 			}
 			newobject.ai.ray.owner = object.m_index;
